SERVER-19856: Register for PRESHUTDOWN notifications on Windows Vista+